<resources>
    <string name="app_name">GADS Leaderboard Application</string>
    <string name="leaderboard_all_caps">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>